[package]
name = "kami_alchemy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstar = "0.9"
bevy = { version = "0.9", features = ["jpeg"] }
bevy_pancam = { version = "0.7", features = [] }
rand = "0.8"
